<resources>
    <string name="app_name">Github User</string>
    <string name="DetailUserActivity">Detail User</string>
    <string name="FavoriteUserActivity">Favorite User</string>
    <string name="SettingUserActivity">Settings</string>
    <string name="username">{username}</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="searchbar_hint">Mau cari siapa?</string>
    <string name="no_users_found">No users found</string>
    <string name="detail_user_image_profile">Detail User image profile</string>
    <string name="profile_user_list">Profile User List</string>
    <string name="image_no_users_detail_found">Image no users Detail found</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="settings">Settings</string>
    <string name="favorite_main_menu">Favorite</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
</resources>